Add functionality for slot booking,canceling and auto schedular

--- a/hrms-backend/src/main/resources/application.properties
+++ b/hrms-backend/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 #database setting
 spring.application.name=ems
 server.port=8081
-spring.datasource.url=jdbc:sqlserver://L11-vagherav-1:1433;instanceName=SQLEXPRESS;databaseName=hrms_database;encrypt=false;integratedSecurity=false
+spring.datasource.url=jdbc:sqlserver://L11-vagherav-1:1433;instanceName=SQLEXPRESS;databaseName=hrms_database;encrypt=false;integratedSecurity=false;sendTimeAsDateTime=false
 spring.datasource.username=sa
 spring.datasource.password=Vadher@2025
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # JPA settings
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
