--- a/hrms-frontend/package.json
+++ b/hrms-frontend/package.json
@@ -8,7 +8,6 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
-    
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -22,6 +21,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-mui-sidebar": "^1.6.10",
     "react-router-dom": "^7.13.0"
   },
